--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,6 +92,7 @@ target_link_libraries (${EXEC_NAME} bfd iberty opcodes z dl)
 if (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
 	message (STATUS "Compiling a RELEASE build - enabling install rules")
 	install(TARGETS ${EXEC_NAME} RUNTIME DESTINATION "bin")
+	install(FILES "doc/${EXEC_NAME}.1" DESTINATION "share/man/man1")
 else (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
 	message (WARNING "Install rules are only available for DEBUG builds.")
 endif (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
