Very early unit tests with libcheck. Will need proper functional tests as well

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,24 @@ if (POPT_FOUND)
 	endif (POPT_HEADER)
 endif (POPT_FOUND)
 
+find_library(LIBCHECK "check")
+find_file(CHECK_HEADER "check.h")
+if (LIBCHECK AND CHECK_HEADER)
+	message (STATUS "libcheck found - enabling unit tests")
+
+	file (MAKE_DIRECTORY "${PROJECT_BINARY_DIR}/tests")
+	file (GLOB ${PROJECT_NAME}_TEST_SRCS RELATIVE "${PROJECT_SOURCE_DIR}/tests"
+		tests/*.c
+	)
+
+	foreach (test_source ${${PROJECT_NAME}_TEST_SRCS})
+		string (REPLACE ".c" "" test_executable ${test_source})
+		add_executable ("tests/${test_executable}" "tests/${test_source}")
+		target_link_libraries ("tests/${test_executable}" bfd iberty opcodes z dl check)
+	endforeach (test_source ${${PROJECT_NAME}_TEST_SRCS})
+else (LIBCHECK AND CHECK_HEADER)
+	message (STATUS "libcheck not found - no unit tests")
+endif (LIBCHECK AND CHECK_HEADER)
 
 
 find_library (LIBIBERTY "iberty")
@@ -134,5 +152,8 @@ if (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
 else (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
 	message (WARNING "Install rules are only available for DEBUG builds.")
 endif (${CMAKE_BUILD_TYPE} STREQUAL "RELEASE")
+
+#enable_testing()
+#add_test(NAME foo COMMAND "/usr/bin/false")
 
 # vim:set tabstop=8 softtabstop=8 shiftwidth=8 noexpandtab list:
