Need to have dependencies installed before building

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: c
 compiler:
-  - gcc
+	- gcc
+before_install:
+	- sudo apt-get install binutils binutils-dev
 script: cmake . && make
+
+# vim:set tabstop=4 softtabstop=4 shiftwidth=4 noexpandtab list:
