--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 compiler:
   - gcc
 before_install:
-  - sudo apt-get install binutils binutils-dev
+  - sudo apt-get install binutils binutils-dev check
 script: cmake . && make
 
 # vim:set tabstop=2 softtabstop=2 shiftwidth=2 expandtab ft=yaml list:
