--- a/binutils.h.in
+++ b/binutils.h.in
@@ -45,4 +45,4 @@ SUCH DAMAGE.
 #include <libiberty.h>
 #include <dis-asm.h>
 
-/* vim:set tabstop=4 softtabstop=4 shiftwidth=4 noexpandtab list: */
+/* vim:set tabstop=4 softtabstop=4 shiftwidth=4 noexpandtab : */
