Try lib64 first, then lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -152,12 +152,17 @@ endif (NOT LIBBFD_HEADER)
 # links the executable.
 #
 function (find_binutils_dep libname)
-	foreach (library_path ${CMAKE_SYSTEM_PREFIX_PATH})
-		file (GLOB ${libname}_so_path RELATIVE "${library_path}/lib64" "${library_path}/lib64/lib${libname}-*.so")
+	foreach (library_prefix ${CMAKE_SYSTEM_PREFIX_PATH})
+		foreach (library_dir "lib64" "lib")
+			file (GLOB ${libname}_so_path RELATIVE "${library_prefix}/${library_dir}" "${library_prefix}/${library_dir}/lib${libname}-*.so")
+			if (${libname}_so_path)
+				break ()
+			endif (${libname}_so_path)
+		endforeach (library_dir)
 		if (${libname}_so_path)
 			break ()
 		endif (${libname}_so_path)
-	endforeach (library_path)
+	endforeach (library_prefix)
 
 	find_library (${libname}_path ${${libname}_so_path} NAMES "lib${libname}.so" "lib${libname}.a")
 	if (NOT ${libname}_path)
