--- a/optenum.sh.in
+++ b/optenum.sh.in
@@ -25,10 +25,16 @@
 # OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 # SUCH DAMAGE.
 
-function option_complete {
-	local command=${1} stem=${2} enum_opt index=0;
+function __option_complete {
+	local command=${1} stem=${2} enum_opt option;
+	case $(type -t ${command}) in
+		file)
+			command=$(type -fp ${command});;
+		*)
+			return 1;;
+	esac
 	# TODO In future, handle the case where the previous token on the
-	# command line is an option that expects a mandatry argument
+	# command line is an option that expects a mandatory argument
 	[[ ${stem} = -* ]] || return 124
 
 	[[ ${stem%-*} = - ]] && enum_opt="-2"
@@ -37,14 +43,12 @@ function option_complete {
 	enum_opt="${enum_opt} -b"
 	while read option; do 
 		[[ ${option} == ${stem}* ]] || continue
-		COMPREPLY[${index}]=${option}
-		index=$((1+$index))
+		COMPREPLY+=(${option})
 	done << _EOMAN
-		$(optenum ${enum_opt} $(which ${command} 2>/dev/null) 2>/dev/null)
+		$(@CMAKE_INSTALL_PREFIX@/bin/optenum ${enum_opt} ${command} 2>/dev/null)
 _EOMAN
-	unset option
 }
 
-complete -D -F option_complete -o default
+complete -D -F __option_complete -o default
 
 # vim:set tabstop=8 softtabstop=8 shiftwidth=8 noexpandtab :
