--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: c
+
 compiler:
   - gcc
+
 before_install:
   - sudo apt-get install binutils binutils-dev check libpopt0 libpopt-dev
-script: cmake --version && cmake -DCMAKE_BUILD_TYPE:STRING=DEBUG -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE . && make && ldd optenum && ls -lh optenum && ./tests/disassemble_tests
+
+script:
+  - cmake --version 
+  - cmake -DCMAKE_BUILD_TYPE:STRING=DEBUG -DCMAKE_VERBOSE_MAKEFILE:BOOL=TRUE .
+  - make 
+  - ldd optenum
+  - ls -lh optenum
+  - ./tests/disassemble_tests
 
 # vim:set tabstop=2 softtabstop=2 shiftwidth=2 expandtab ft=yaml :
